PERFOMANCE: Short.valueOf instead of new Short