@@ -1,5 +1,5 @@
 /*-
- * $Id: Identifier.java,v 1.93.2.2 2006/02/15 19:31:50 arseniy Exp $
+ * $Id: Identifier.java,v 1.93.2.3 2006/03/09 17:18:50 arseniy Exp $
  *
  * Copyright ¿ 2004-2005 Syrus Systems.
  * Dept. of Science & Technology.
@@ -32,7 +32,7 @@ import com.syrus.util.transport.idl.IdlTransferableObject;
  * its respective <code>creatorId</code> and <code>modifierId</code>. But
  * there&apos;s a particular task of <code>id</code> handling.
  *
- * @version $Revision: 1.93.2.2 $, $Date: 2006/02/15 19:31:50 $
+ * @version $Revision: 1.93.2.3 $, $Date: 2006/03/09 17:18:50 $
  * @author $Author: arseniy $
  * @author Tashoyan Arseniy Feliksovich
  * @module general
@@ -292,7 +292,7 @@ public final class Identifier implements Comparable<Identifier>,
 		final Map<Short, Set<Identifier>> entityIdsMap = new HashMap<Short, Set<Identifier>>();
 		for (final Identifiable identifiable : identifiables) {
 			final Identifier id = identifiable.getId();
-			final Short entityKey = new Short(id.getMajor());
+			final Short entityKey = Short.valueOf(id.getMajor());
 			Set<Identifier> entityIds = entityIdsMap.get(entityKey);
 			if (entityIds == null) {
 				entityIds = new HashSet<Identifier>();
@@ -345,8 +345,8 @@ public final class Identifier implements Comparable<Identifier>,
 
 	/**
 	 * Creates new set of identifiers, containing values from set
-	 * <code>identifiables1</code> with exception to those, containing in set
-	 * <code>identifiables2</code>
+	 * <code>minuendi</code> with exception to those, containing in set
+	 * <code>subtrahendi</code>
 	 * NOTE: Method is not synchronized on arguments. Need synchronization on <code>subtrahendi</code>.
 	 * 
 	 * @param minuendi
@@ -386,9 +386,9 @@ public final class Identifier implements Comparable<Identifier>,
 	}
 
 	/**
-	 * Removes from set of identifiers <code>identifiers</code> those, which
-	 * contained in set of identifiables <code>identifiables</code>. (I. e.,
-	 * parameter <code>identifiers</code> is passed as &quot;inout&quot;
+	 * Removes from set of identifiers <code>minuendi</code> those, which
+	 * contained in set of identifiables <code>subtrahendi</code>. (I. e.,
+	 * parameter <code>minuendi</code> is passed as &quot;inout&quot;
 	 * argument.)
 	 * NOTE: Method is not synchronized on arguments. Need synchronization on <code>subtrahendi</code>.
 	 * 
